Project

General

Profile

Actions

Bug #35990

closed

Chunked encoding fails if chunk greater than 1MiB

Added by Robin Johnson over 5 years ago. Updated over 5 years ago.

Status:
Resolved
Priority:
High
Assignee:
Target version:
-
% Done:

0%

Source:
Community (dev)
Tags:
Backport:
luminous, mimic
Regression:
No
Severity:
2 - major
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

If a response uses chunked encoding, and the chunk is greater than 1MiB, the chunk length is not correctly printed.
This bug must have existed for Swift previously, and is made much more visible by the changes in https://github.com/ceph/ceph/pull/23940

Bad chunk header:
10219b\r\0<?xml...

Good chunk header:
223\r\n<?xml...

Related issues 2 (0 open2 closed)

Copied to rgw - Backport #36124: luminous: Chunked encoding fails if chunk greater than 1MiBResolvedPrashant DActions
Copied to rgw - Backport #36125: mimic: Chunked encoding fails if chunk greater than 1MiBResolvedPrashant DActions
Actions #2

Updated by Casey Bodley over 5 years ago

  • Status changed from New to 7
Actions #3

Updated by Casey Bodley over 5 years ago

  • Status changed from 7 to Pending Backport
Actions #4

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #36124: luminous: Chunked encoding fails if chunk greater than 1MiB added
Actions #5

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #36125: mimic: Chunked encoding fails if chunk greater than 1MiB added
Actions #6

Updated by Nathan Cutler over 5 years ago

  • Status changed from Pending Backport to Resolved
Actions #7

Updated by Nathan Cutler over 5 years ago

  • Is duplicate of Bug #35994: Configurable ListBucket max-keys limit added
Actions #8

Updated by Nathan Cutler over 5 years ago

  • Is duplicate of deleted (Bug #35994: Configurable ListBucket max-keys limit)
Actions

Also available in: Atom PDF